--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
             <p class="text-danger warning-msg"></p>
             <div class="dice txt-p">
                 <p>Player 1</p>
-                <img src="images/dice1.png" alt="" onclick="fun1()">
+                <img class="image-res" src="images/dice1.png" alt="" onclick="fun1()">
             </div>
             <div class="dice txt-p">
                 <p>Player 2</p>
-                <img src="images/dice1.png" alt="" onclick="fun2()">
+                <img class="image-res" src="images/dice1.png" alt="" onclick="fun2()">
             </div>
+
             <br>
             <button class="btn-refresh txt-p" onclick="reset()">Refresh</button>
 
